--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,22 @@ select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+addopts = "--cov=src"
+asyncio_mode = "auto"
+
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["hatch>=1.15.1", "hatch-vcs>=0.5.0", "ruff>=0.14.4"]
+dev = [
+    "hatch>=1.15.1",
+    "hatch-vcs>=0.5.0",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.4",
+]
